--- a/main.css
+++ b/main.css
@@ -6,4 +6,8 @@ a
 multi-lines 
 comment
 */
-.content { background-color: blu; /* "blue" is not a valid color value. It should be "blue". */ }
+.content { background-color: blue; /* "blue" is not a valid color value. It should be "blue". */ }
+
+body {
+        background-color: green;
+} 
